alr, we're back in buisness
Lets goooooo, also, the deobufsaction is EXPONETIALY BETTER