@@ -5,15 +5,22 @@ import java.lang.management.BufferPoolMXBean;
 import java.lang.management.ManagementFactory;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
 import java.util.function.LongSupplier;
 import net.optifine.Config;
 
 public class NativeMemory {
    private static long imageAllocated = 0L;
-   private static LongSupplier bufferAllocatedSupplier = makeLongSupplier(new String[][]{{"sun.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}, {"jdk.internal.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}}, makeDefaultAllocatedSupplier());
-   private static LongSupplier bufferMaximumSupplier = makeLongSupplier(new String[][]{{"sun.misc.VM", "maxDirectMemory"}, {"jdk.internal.misc.VM", "maxDirectMemory"}}, makeDefaultMaximumSupplier());
+   private static LongSupplier bufferAllocatedSupplier = makeLongSupplier(
+      new String[][]{
+         {"sun.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"},
+         {"jdk.internal.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}
+      },
+      makeDefaultAllocatedSupplier()
+   );
+   private static LongSupplier bufferMaximumSupplier = makeLongSupplier(
+      new String[][]{{"sun.misc.VM", "maxDirectMemory"}, {"jdk.internal.misc.VM", "maxDirectMemory"}}, makeDefaultMaximumSupplier()
+   );
 
    public static long getBufferAllocated() {
       return bufferAllocatedSupplier == null ? -1L : bufferAllocatedSupplier.getAsLong();
@@ -24,11 +31,11 @@ public class NativeMemory {
    }
 
    public static synchronized void imageAllocated(NativeImage nativeImage) {
-      imageAllocated += nativeImage.getSize();
+      imageAllocated = imageAllocated + nativeImage.getSize();
    }
 
    public static synchronized void imageFreed(NativeImage nativeImage) {
-      imageAllocated -= nativeImage.getSize();
+      imageAllocated = imageAllocated - nativeImage.getSize();
    }
 
    public static long getImageAllocated() {
@@ -36,48 +43,36 @@ public class NativeMemory {
    }
 
    private static BufferPoolMXBean getDirectBufferPoolMXBean() {
-      List mxBeans = ManagementFactory.getPlatformMXBeans(BufferPoolMXBean.class);
-      Iterator var1 = mxBeans.iterator();
-
-      BufferPoolMXBean mxBean;
-      do {
-         if (!var1.hasNext()) {
-            return null;
+      for (BufferPoolMXBean mxBean : ManagementFactory.getPlatformMXBeans(BufferPoolMXBean.class)) {
+         if (Config.equals(mxBean.getName(), "direct")) {
+            return mxBean;
          }
+      }
 
-         mxBean = (BufferPoolMXBean)var1.next();
-      } while(!Config.equals(mxBean.getName(), "direct"));
-
-      return mxBean;
+      return null;
    }
 
    private static LongSupplier makeDefaultAllocatedSupplier() {
       final BufferPoolMXBean mxBean = getDirectBufferPoolMXBean();
-      if (mxBean == null) {
-         return null;
-      } else {
-         LongSupplier ls = new LongSupplier() {
-            public long getAsLong() {
-               return mxBean.getMemoryUsed();
-            }
-         };
-         return ls;
-      }
+      return mxBean == null ? null : new LongSupplier() {
+         public long getAsLong() {
+            return mxBean.getMemoryUsed();
+         }
+      };
    }
 
    private static LongSupplier makeDefaultMaximumSupplier() {
-      LongSupplier ls = new LongSupplier() {
+      return new LongSupplier() {
          public long getAsLong() {
             return Runtime.getRuntime().maxMemory();
          }
       };
-      return ls;
    }
 
    private static LongSupplier makeLongSupplier(String[][] paths, LongSupplier defaultSupplier) {
-      List exceptions = new ArrayList();
+      List<Throwable> exceptions = new ArrayList();
 
-      for(int i = 0; i < paths.length; ++i) {
+      for (int i = 0; i < paths.length; i++) {
          String[] path = paths[i];
 
          try {
@@ -90,12 +85,8 @@ public class NativeMemory {
          }
       }
 
-      Iterator it = exceptions.iterator();
-
-      while(it.hasNext()) {
-         Throwable t = (Throwable)it.next();
-         String var10000 = t.getClass().getName();
-         Config.warn("(Reflector) " + var10000 + ": " + t.getMessage());
+      for (Throwable t : exceptions) {
+         Config.warn("(Reflector) " + t.getClass().getName() + ": " + t.getMessage());
       }
 
       return defaultSupplier;
@@ -106,18 +97,19 @@ public class NativeMemory {
          return null;
       } else {
          Class cls = Class.forName(path[0]);
-         final Method method = cls.getMethod(path[1]);
+         Method method = cls.getMethod(path[1]);
          method.setAccessible(true);
          final Object object = null;
 
-         for(int i = 2; i < path.length; ++i) {
+         for (int i = 2; i < path.length; i++) {
             String name = path[i];
             object = method.invoke(object);
             method = object.getClass().getMethod(name);
             method.setAccessible(true);
          }
 
-         LongSupplier ls = new LongSupplier() {
+         final Method methodF = method;
+         return new LongSupplier() {
             private boolean disabled = false;
 
             public long getAsLong() {
@@ -125,17 +117,15 @@ public class NativeMemory {
                   return -1L;
                } else {
                   try {
-                     return (Long)method.invoke(object);
+                     return (Long)methodF.invoke(object);
                   } catch (Throwable var2) {
-                     String var10000 = var2.getClass().getName();
-                     Config.warn("(Reflector) " + var10000 + ": " + var2.getMessage());
+                     Config.warn("(Reflector) " + var2.getClass().getName() + ": " + var2.getMessage());
                      this.disabled = true;
                      return -1L;
                   }
                }
             }
          };
-         return ls;
       }
    }
 }
